# Nexus

./: .gitignore  CMakeLists.txt  README.md
cmake/: nexus-config.cmake.in
include/nexus/: nexus.h  nexus_build_config.h.in
src/: main.c  nexus.c  nexus_bits.c  nexus_bytes.c  nexus_errors.c  nexus_file_io.c  nexus_memory_debug.c  nexus_randomness.c  nexus_strings.c  nexus_validation.c
src/internal/: nexus_internal.h
tests/: entry.c
toolchains/: clangcl-llvm.cmake
